[#166333233] Fix incorrect classnames and and start using lodash includes to improve readability

--- a/components/consumer/desktop/card-field/style.scss
+++ b/components/consumer/desktop/card-field/style.scss
@@ -14,7 +14,7 @@
     }
     .pbg-card-field-wrapper {
       position: relative;
-      .pgb-placeholder-icon {
+      .pbg-placeholder-icon {
         width: 24px;
         height: 18px;
         border-radius: 2px;
@@ -29,7 +29,7 @@
     display: inline-flex;
     height: 21px;
     align-items: center;
-    .pgb-card {
+    .pbg-card {
       width: 20px;
       height: 14px;
       margin-left: 6px;
